# disfork

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml  update-release-title.yml
src/: analyzer.rs  cli.rs  github.rs  main.rs
