[package]
name = "disfork"
version = "0.1.0"
edition = "2024"
authors = ["Typed SIGTERM"]
description = "Clean up your useless GitHub forks"
license = "MIT"
repository = "https://github.com/typed-sigterm/disfork/"

[dependencies]
octocrab = "0.41"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
chrono = "0.4"
clap = { version = "4", features = ["cargo", "derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.dist]
inherits = "release"
lto = "thin"
